--- a/index.html
+++ b/index.html
@@ -40,9 +40,19 @@
 
       <div class="cards">
         <div class="card">
+          <img src="project.PNG" alt="" />
+          <div class="title">
+            <span class="code">&lt;</span>
+            <a href="https://ramdom-quote.herokuapp.com/"></a>
+            Ramdom Quote
+            <span class="code">&#47;&gt;</span>
+          </div>
+        </div>
+        <div class="card">
           <img src="project3.PNG" alt="" />
           <div class="title">
             <span class="code">&lt;</span>
+            <a href="http://powergy.ma/"></a>
             Powergy
             <span class="code">&#47;&gt;</span>
           </div>
@@ -51,46 +61,42 @@
           <img src="project2.PNG" alt="" />
           <div class="title">
             <span class="code">&lt;</span>
+            <a href="https://code-famille-mali.djammadev.com/"></a>
             Code de la Famille du Mali
             <span class="code">&#47;&gt;</span>
           </div>
         </div>
         <div class="card">
-          <img src="project.PNG" alt="" />
+          <img src="project4.PNG" alt="" />
           <div class="title">
             <span class="code">&lt;</span>
-            Ramdom Quote
+            <a href="https://boukytech.herokuapp.com/"></a>
+            Portfolio
             <span class="code">&#47;&gt;</span>
           </div>
         </div>
         <div class="card">
-          <img src="project.PNG" alt="" />
+          <img src="project5.PNG" alt="" />
           <div class="title">
             <span class="code">&lt;</span>
-            Ramdom Quote
-            <span class="code">&#47;&gt;</span>
-          </div>
-        </div>
-        <div class="card">
-          <img src="project.PNG" alt="" />
-          <div class="title">
-            <span class="code">&lt;</span>
-            Ramdom Quote
-            <span class="code">&#47;&gt;</span>
-          </div>
-        </div>
-        <div class="card">
-          <img src="project.PNG" alt="" />
-          <div class="title">
-            <span class="code">&lt;</span>
-            Ramdom Quote
+            <a href="https://codepen.io/Bouky45/pen/rNGozKP"></a>
+            Documentation Page
             <span class="code">&#47;&gt;</span>
           </div>
         </div>
         
+        <div class="card">
+            <img src="project.PNG" alt="" />
+            <div class="title">
+              <span class="code">&lt;</span>
+              <a href="https://ramdom-quote.herokuapp.com/"></a>
+              Ramdom Quote
+              <span class="code">&#47;&gt;</span>
+            </div>
+          </div>
       </div>
       <button id="btn">
-        <a href="#projects">
+        <a href="https://github.com/Boukymen/portfolio2">
             &lt; Show all  &#47;&gt;
         </a>
       </button>
