--- a/index.html
+++ b/index.html
@@ -1,136 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>portfolio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+        integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
+
+<body>
     <header id="header">
-      <a href="https://github.com/Boukymen" id="profile-link">
-        <div id="header-img">
-          <img src="logo.png" alt="boukyTech" />
-        </div>
-      </a>
-      <nav id="navbar">
-        <div id="nav-link"><a href="#welcome-section">About</a></div>
-        <div id="nav-link"><a href="#projects">works</a></div>
-        <div id="nav-link"><a href="#contact">Contact</a></div>
-      </nav>
+        <a href="https://github.com/Boukymen" id="profile-link">
+            <div id="header-img">
+                <img src="logo.png" alt="boukyTech" />
+            </div>
+        </a>
+        <nav id="navbar">
+            <div id="nav-link"><a href="#welcome-section">About</a></div>
+            <div id="nav-link"><a href="#projects">works</a></div>
+            <div id="nav-link"><a href="#contact">Contact</a></div>
+        </nav>
     </header>
     <section id="welcome-section">
-      <h1>Welcome to my Portofolio</h1>
-      <h2>I'm software engineer</h2>
-      <button id="btn">
-        <a href="#projects">Projects</a>
-      </button>
+        <h1>Welcome to my Portofolio</h1>
+        <h2>I'm software engineer</h2>
+        <button id="btn">
+            <a href="#projects">Projects</a>
+        </button>
     </section>
 
     <section id="projects">
-      <div class="project-tile">These are some of my projects</div>
+        <div class="project-tile">These are some of my projects</div>
 
-      <div class="cards">
-        <div class="card">
-          <img src="project.PNG" alt="" />
-          <div class="title">
-            <span class="code">&lt;</span>
-            <a href="https://ramdom-quote.herokuapp.com/"></a>
-            Ramdom Quote
-            <span class="code">&#47;&gt;</span>
-          </div>
-        </div>
-        <div class="card">
-          <img src="project3.PNG" alt="" />
-          <div class="title">
-            <span class="code">&lt;</span>
-            <a href="http://powergy.ma/"></a>
-            Powergy
-            <span class="code">&#47;&gt;</span>
-          </div>
-        </div>
-        <div class="card">
-          <img src="project2.PNG" alt="" />
-          <div class="title">
-            <span class="code">&lt;</span>
-            <a href="https://code-famille-mali.djammadev.com/"></a>
-            Code de la Famille du Mali
-            <span class="code">&#47;&gt;</span>
-          </div>
-        </div>
-        <div class="card">
-          <img src="project4.PNG" alt="" />
-          <div class="title">
-            <span class="code">&lt;</span>
-            <a href="https://boukytech.herokuapp.com/"></a>
-            Portfolio
-            <span class="code">&#47;&gt;</span>
-          </div>
-        </div>
-        <div class="card">
-          <img src="project5.PNG" alt="" />
-          <div class="title">
-            <span class="code">&lt;</span>
-            <a href="https://codepen.io/Bouky45/pen/rNGozKP"></a>
-            Documentation Page
-            <span class="code">&#47;&gt;</span>
-          </div>
-        </div>
-        
-        <div class="card">
-            <img src="project.PNG" alt="" />
-            <div class="title">
-              <span class="code">&lt;</span>
-              <a href="https://ramdom-quote.herokuapp.com/"></a>
-              Ramdom Quote
-              <span class="code">&#47;&gt;</span>
+        <div class="cards">
+            <div class="card">
+                <a href="https://ramdom-quote.herokuapp.com/" target="_blank">
+                    <img src="project.PNG" alt="" />
+                </a>
+                <div class="title">
+                    <span class="code">&lt;</span>
+                    Ramdom Quote
+                    <span class="code">&#47;&gt;</span>
+                </div>
             </div>
-          </div>
-      </div>
-      <button id="btn">
-        <a href="https://github.com/Boukymen/portfolio2">
-            &lt; Show all  &#47;&gt;
-        </a>
-      </button>
+            <div class="card">
+                <a href="http://powergy.ma/" target="_blank">
+                    <img src="project3.PNG" alt="" />
+                </a>
+                <div class="title">
+                    <span class="code">&lt;</span>
+                    Powergy
+                    <span class="code">&#47;&gt;</span>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://code-famille-mali.djammadev.com/" target="_blank">
+                    <img src="project2.PNG" alt="" />
+                </a>
+                <div class="title">
+                    <span class="code">&lt;</span>
+                    Code de la Famille du Mali
+                    <span class="code">&#47;&gt;</span>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://boukytech.herokuapp.com/" target="_blank">
+                    <img src="project4.PNG" alt="" />
+                </a>
+                <div class="title">
+                    <span class="code">&lt;</span>
+                    Portfolio
+                    <span class="code">&#47;&gt;</span>
+                </div>
+            </div>
+            <div class="card">
+                <a href="https://codepen.io/Bouky45/pen/rNGozKP" target="_blank">
+                    <img src="project5.PNG" alt="" />
+                </a>
+                <div class="title">
+                    <span class="code">&lt;</span>
+                    Documentation Page
+                    <span class="code">&#47;&gt;</span>
+                </div>
+            </div>
+
+            <div class="card">
+                <a href="https://ramdom-quote.herokuapp.com/" target="_blank">
+                    <img src="project.PNG" alt="" />
+                 </a>
+                    <div class="title">
+                        <span class="code">&lt;</span>
+                Ramdom Quote
+                <span class="code">&#47;&gt;</span>        
+               
+            </div>
+        </div>
+        </div>
+        <button id="btn">
+            <a href="https://github.com/Boukymen/portfolio2">
+                &lt; Show all &#47;&gt;
+            </a>
+        </button>
     </section>
 
     <section id="contact">
-      <footer>
-        <div class="footer-title">
-          <h1>Let's work together...</h1>
-          <h3>How do you take your coffee?</h3>
-        </div>
-        <div class="confid">
-          <a
-            href="https://www.facebook.com/BoukyKing45/"
-            target="_blank"
-            title="Facebook"
-          >
-            <span> <i class="fab fa-facebook"></i> Facebook </span>
-          </a>
-          <a href="https://github.com/Boukymen" target="_blank">
-            <span> <i class="fab fa-github"></i> GitHub </span>
-          </a>
-          <a href="https://twitter.com/Bakary_KONATE_" target="_blank">
-            <span> <i class="fab fa-twitter"></i> Twitter </span>
-          </a>
-          <a href="mailto:boukymen@gmail.com" target="_blank">
-            <span> <i class="fas fa-envelope-square"></i> Email </span>
-          </a>
-          <a href="tel:+212699906595">
-            <span> <i class="fas fa-mobile-alt"></i> Phone </span>
-          </a>
-        </div>
-        <p>Copyright 2021, BoukyTech</p>
-      </footer>
+        <footer>
+            <div class="footer-title">
+                <h1>Let's work together...</h1>
+                <h3>How do you take your coffee?</h3>
+            </div>
+            <div class="confid">
+                <a href="https://www.facebook.com/BoukyKing45/" target="_blank" title="Facebook">
+                    <span> <i class="fab fa-facebook"></i> Facebook </span>
+                </a>
+                <a href="https://github.com/Boukymen" target="_blank">
+                    <span> <i class="fab fa-github"></i> GitHub </span>
+                </a>
+                <a href="https://twitter.com/Bakary_KONATE_" target="_blank">
+                    <span> <i class="fab fa-twitter"></i> Twitter </span>
+                </a>
+                <a href="mailto:boukymen@gmail.com" target="_blank">
+                    <span> <i class="fas fa-envelope-square"></i> Email </span>
+                </a>
+                <a href="tel:+212699906595">
+                    <span> <i class="fas fa-mobile-alt"></i> Phone </span>
+                </a>
+            </div>
+            <p>Copyright 2021, BoukyTech</p>
+        </footer>
     </section>
-  </body>
+</body>
+
 </html>
